# libSDL12

./: .gitignore  CMakeLists.txt  Makefile  Makefile.aros  Makefile.cross  Makefile.morphos  README  README.AmigaOS  SDL.c  SDL_amigastub.c  SDLstub.c
amiga/makefile-support/: SDL_amigaversion.h  SDL_version.h
audio/: SDL_audio.c  SDL_sysaudio.h
audio/amigaos/: SDL_ahiaudio.c  SDL_ahiaudio.h
cpuinfo/: SDL_cpuinfo.c
gl_dummy/: makefile
include/: SDL.h  SDL_active.h  SDL_amigaversion.h.in  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_config.h  SDL_config.h.default  SDL_config.h.in  SDL_config_amiga.h  SDL_config_dreamcast.h  SDL_config_macos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_nds.h  SDL_config_os2.h  SDL_config_symbian.h  SDL_config_win32.h  SDL_copying.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_getenv.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_loadso.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_platform.h  SDL_quit.h  SDL_rwops.h  SDL_stdinc.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  (+4 more)
include-GL/: amigamesa.h  gl.h  glsmap.h  glut.h  tube.h
include/SDL/: SDL_config.h  SDL_config_amiga.h  SDL_thread.h
src/: SDL.c  SDL_error.c  SDL_error_c.h  SDL_fatal.c  SDL_fatal.h
src/audio/: SDL_audio.c  SDL_audio_c.h  SDL_audiocvt.c  SDL_audiodev.c  SDL_audiodev_c.h  SDL_audiomem.h  SDL_mixer.c  SDL_mixer_MMX_VC.h  SDL_mixer_m68k.c  SDL_mixer_m68k.h  SDL_sysaudio.h  SDL_wave.c  SDL_wave.h
src/audio/amigaos/: SDL_ahiaudio.c  SDL_ahiaudio.h
src/audio/disk/: SDL_diskaudio.c  SDL_diskaudio.h
src/audio/dummy/: SDL_dummyaudio.c  SDL_dummyaudio.h
src/cdrom/: SDL_cdrom.c  SDL_syscdrom.h
src/cdrom/aix/: SDL_syscdrom.c
src/cdrom/amigaos/: SDL_syscdrom.c
src/cdrom/beos/: SDL_syscdrom.cc
src/cdrom/bsdi/: SDL_syscdrom.c
src/cdrom/dc/: SDL_syscdrom.c
src/cdrom/dummy/: SDL_syscdrom.c
src/cdrom/freebsd/: SDL_syscdrom.c
src/cdrom/linux/: SDL_syscdrom.c
src/cdrom/macos/: SDL_syscdrom.c  SDL_syscdrom_c.h
src/cdrom/macosx/: AudioFilePlayer.c  AudioFilePlayer.h  AudioFileReaderThread.c  CDPlayer.c  CDPlayer.h  SDLOSXCAGuard.c  SDLOSXCAGuard.h  SDL_syscdrom.c  SDL_syscdrom_c.h
src/cdrom/mint/: SDL_syscdrom.c
src/cdrom/openbsd/: SDL_syscdrom.c
src/cdrom/os2/: SDL_syscdrom.c
src/cdrom/osf/: SDL_syscdrom.c
src/cdrom/qnx/: SDL_syscdrom.c
src/cdrom/win32/: SDL_syscdrom.c
src/cpuinfo/: SDL_cpuinfo.c
src/events/: SDL_active.c  SDL_events.c  SDL_events_c.h  SDL_expose.c  SDL_keyboard.c  SDL_mouse.c  SDL_quit.c  SDL_resize.c  SDL_sysevents.h
src/file/: SDL_rwops.c
src/joystick/: SDL_joystick.c  SDL_joystick_c.h  SDL_sysjoystick.c  SDL_sysjoystick.h
src/joystick/amigaos/: SDL_sysjoystick.c
src/joystick/dummy/: SDL_sysjoystick.c
src/main/dummy/: SDL_dummy_main.c
src/stdlib/: SDL_getenv.c  SDL_iconv.c  SDL_malloc.c  SDL_qsort.c  SDL_stdlib.c  SDL_string.c
src/thread/: SDL_systhread.h  SDL_thread_c.h
src/thread/amigaos/: SDL_syssem.c  SDL_systhread.c  SDL_systhread_c.h  SDL_thread.c
src/thread/generic/: SDL_syscond.c  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_syssem.c  SDL_systhread.c  SDL_systhread_c.h
src/thread/pth/: SDL_syscond.c  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_systhread.c  SDL_systhread_c.h
src/thread/pthread/: SDL_syscond.c  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_syssem.c  SDL_systhread.c  SDL_systhread_c.h
src/timer/: SDL_systimer.h  SDL_timer.c  SDL_timer_c.h
src/timer/amigaos/: SDL_systimer.c
src/timer/beos/: SDL_systimer.c
src/timer/dc/: SDL_systimer.c
src/timer/dummy/: SDL_systimer.c
src/timer/macos/: SDL_MPWtimer.c  SDL_systimer.c
src/timer/mint/: SDL_systimer.c  SDL_vbltimer.S  SDL_vbltimer_s.h
src/timer/nds/: SDL_systimer.c
src/timer/os2/: SDL_systimer.c
src/timer/riscos/: SDL_systimer.c
src/timer/symbian/: SDL_systimer.cpp
src/timer/unix/: SDL_systimer.c
src/timer/win32/: SDL_systimer.c
src/timer/wince/: SDL_systimer.c
src/video/: SDL_RLEaccel.c  SDL_RLEaccel_c.h  SDL_blit.c  SDL_blit.h  SDL_blit_0.c  SDL_blit_1.c  SDL_blit_A.c  SDL_blit_N.c  SDL_bmp.c  SDL_cursor.c  SDL_cursor_c.h  SDL_gamma.c  SDL_glfuncs.h  SDL_leaks.h  SDL_pixels.c  SDL_pixels_c.h  SDL_stretch.c  SDL_stretch_c.h  SDL_surface.c  SDL_sysvideo.h  SDL_sysvideo_o.h  SDL_video.c  SDL_yuv.c  SDL_yuv_sw.c  SDL_yuv_sw_c.h  SDL_yuvfuncs.h  blank_cursor.h  default_cursor.h
src/video/cybergfx/: SDL_amigaevents.c  SDL_amigaevents_c.h  SDL_amigamouse.c  SDL_amigamouse_c.h  SDL_cgxaccel.c  SDL_cgxgl.c  SDL_cgxgl_c.h  SDL_cgximage.c  SDL_cgximage_c.h  SDL_cgxmodes.c  SDL_cgxmodes_c.h  SDL_cgxvideo.c  SDL_cgxvideo.h  SDL_cgxwm.c  SDL_cgxwm_c.h
src/video/directfb/: SDL_DirectFB_events.c  SDL_DirectFB_events.h  SDL_DirectFB_video.c  SDL_DirectFB_video.h  SDL_DirectFB_yuv.c  SDL_DirectFB_yuv.h
src/video/dummy/: SDL_nullevents.c  SDL_nullevents_c.h  SDL_nullmouse.c  SDL_nullmouse_c.h  SDL_nullvideo.c  SDL_nullvideo.h
thread/amigaos/: SDL_syssem.c  SDL_systhread.c  SDL_systhread_c.h  SDL_thread.c
video/: SDL_blit_A.c  SDL_blit_N.c  SDL_surface.c  SDL_video.c
video/cybergfx/: SDL_amigaevents.c  SDL_amigamouse.c  SDL_cgxaccel.c  SDL_cgximage.c  SDL_cgxmodes.c  SDL_cgxvideo.c  SDL_cgxvideo.h  SDL_cgxwm.c
